fix(css & js) placement visibility

--- a/src/components/titleSection/style.scss
+++ b/src/components/titleSection/style.scss
@@ -26,3 +26,6 @@ margin-top:10px;
 
   margin-top: -20px;
 }
+.secondSection{
+  justify-content:space-between;
+}
